# mytsdb

./: .dockerignore  .gitignore  .gitmodules  AUTHENTICATION.md  CHECKLIST.md  CMakeLists.txt  CODEFIXLIST  CTestTestfile.cmake  DEPENDENCIES.md  DESIGN.md  FEATURES.md  FINALCLIST  GETTING_STARTED.md  HISTOGRAM_IMPLEMENTATION_PLAN.md  INTEGRATION_TESTING_PLAN.md  Makefile  NEWRIGORCLIST.md  PERFORMANCE_TESTING_PLAN.md  PERFORMANCE_TEST_CONSOLIDATION_PLAN.md  PHASE5_REQUIREMENTS_SNAPSHOT.md  PROJECT_STRUCTURE.md  README.md  TESTPLAN.md  benchmark_results.txt  calc_read_stats.sh  compile_commands.json  debug_background_processor.cpp  debug_block_read_issue  debug_block_read_issue.cpp  debug_build.sh  debug_error_conditions.cpp  debug_hang_test  debug_hang_test.cpp  debug_no_storage_test  debug_no_storage_test.cpp  debug_result_test.cpp  debug_segfault.cpp  debug_series_id_issue  debug_series_id_issue.cpp  debug_simple_concurrent_test.cpp  (+31 more)
common/: CMakeLists.txt
common/proto/: metrics.proto  remote.proto
cpp-tsdb/: CMakeLists.txt
cpp-tsdb/test/: CMakeLists.txt  test_utils.hpp
examples/: CMakeLists.txt  client.cpp  quickstart.cpp
examples/prometheus_remote_storage/: CMakeLists.txt  README.md  prometheus_remote_storage_server.cpp
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile
src/tsdb/: CMakeLists.txt  CTestTestfile.cmake  Makefile  main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  main.cpp  promql_parser_tests  test_config.h  test_config.h.in
test/benchmark/: CMakeLists.txt  CTestTestfile.cmake  Makefile  actual_tsdb_write_test  concurrency_benchmark.cpp  concurrency_performance_test.cpp  core_benchmark.cpp  e2e_query_benchmark.cpp  filtering_storage_benchmark.cpp  indexing_performance_test.cpp  latency_benchmark.cpp  memory_efficiency_performance_test.cpp  memory_optimization_benchmark.cpp  mixed_workload_benchmark.cpp  otel_write_performance_benchmark.cpp  otel_write_with_verification_benchmark.cpp  parquet_high_cardinality_benchmark.cpp  promql_cache_benchmark.cpp  read_performance_benchmark.cpp  rule_manager_benchmark.cpp  run_baseline_benchmarks.sh  run_otel_performance_test.sh  tsdb_performance_test.cpp  wal_performance_benchmark.cpp  working_tsdb_test  working_tsdb_test.cpp  write_new_vs_update_benchmark.cpp  write_performance_benchmark.cpp
test/comprehensive_promql/: CMakeLists.txt  README.md  aggregation_tests.cpp  binary_operator_tests.cpp  complex_scenarios_tests.cpp  function_tests.cpp  selector_tests.cpp  subquery_tests.cpp  test_fixture.h  test_harness.cpp
test/core/: CMakeLists.txt  metric_test.cpp  types_test.cpp
test/histogram/: CMakeLists.txt  ddsketch_test.cpp  fixed_bucket_test.cpp
test/integration/: CMakeLists.txt  CTestTestfile.cmake  Makefile  config_integration_test.cpp  core_storage_integration_test.cpp  derived_metrics_integration_test.cpp  end_to_end_workflow_test.cpp  error_handling_test.cpp  grpc_integration_test.cpp  index_performance_integration_test.cpp  multi_component_test.cpp  negative_matchers_integration_test.cpp  otel_integration_test.cpp  query_instrumentation_integration_test.cpp  read_performance_e2e_test.cpp  recovery_test.cpp  self_monitor_e2e_test.cpp  semantic_vector_integration_test.cpp  semantic_vector_performance_test.cpp  semantic_vector_stress_test.cpp  storage_demotion_test.cpp  storage_histogram_integration_test.cpp  storage_persistence_test.cpp  storage_stability_test.cpp  storageimpl_read_test.cpp  time_bounds_pruning_integration_test.cpp  tsdb_config_integration_test  tsdb_config_integration_test[1]_include.cmake  tsdb_config_integration_test[1]_tests.cmake  tsdb_core_storage_integration_test  tsdb_core_storage_integration_test[1]_include.cmake  tsdb_core_storage_integration_test[1]_tests.cmake  tsdb_end_to_end_workflow_test  tsdb_end_to_end_workflow_test[1]_include.cmake  tsdb_end_to_end_workflow_test[1]_tests.cmake  tsdb_error_handling_test  tsdb_error_handling_test[1]_include.cmake  tsdb_error_handling_test[1]_tests.cmake  tsdb_grpc_integration_test  tsdb_grpc_integration_test[1]_include.cmake  (+13 more)
test/load/: CMakeLists.txt  CTestTestfile.cmake  Makefile  scale_test.cpp  tsdb_load_tests  tsdb_load_tests[1]_include.cmake  tsdb_load_tests[1]_tests.cmake  tsdb_peak_load_test  tsdb_peak_load_test[1]_include.cmake  tsdb_peak_load_test[1]_tests.cmake  tsdb_sustained_load_test  tsdb_sustained_load_test[1]_include.cmake  tsdb_sustained_load_test[1]_tests.cmake
test/otel_grpc/: CMakeLists.txt  README.md  TEST_ORGANIZATION_PLAN.md
test/scalability/: CMakeLists.txt  CTestTestfile.cmake  Makefile  tsdb_horizontal_scalability_test  tsdb_horizontal_scalability_test[1]_include.cmake  tsdb_horizontal_scalability_test[1]_tests.cmake  tsdb_scalability_tests  tsdb_scalability_tests[1]_include.cmake  tsdb_scalability_tests[1]_tests.cmake  tsdb_vertical_scalability_test  tsdb_vertical_scalability_test[1]_include.cmake  tsdb_vertical_scalability_test[1]_tests.cmake
test/storage/: CMakeLists.txt  async_wal_test.cpp  cache_hierarchy_repro_test.cpp  derived_metrics_test.cpp  sharded_index_test.cpp  sharded_wal_test.cpp
test/stress/: CMakeLists.txt  CTestTestfile.cmake  Makefile  tsdb_data_volume_stress_test  tsdb_data_volume_stress_test[1]_include.cmake  tsdb_data_volume_stress_test[1]_tests.cmake  tsdb_resource_stress_test  tsdb_resource_stress_test[1]_include.cmake  tsdb_resource_stress_test[1]_tests.cmake  tsdb_stress_tests  tsdb_stress_tests[1]_include.cmake  tsdb_stress_tests[1]_tests.cmake
test/test_util/: temp_dir.h
test/tsdb/: CMakeLists.txt
test/unit/: CMakeLists.txt  CTestTestfile.cmake  Makefile  result_minimal_test.cpp  tsdb_adaptive_compressor_unit_tests  tsdb_adaptive_compressor_unit_tests[1]_include.cmake  tsdb_adaptive_compressor_unit_tests[1]_tests.cmake  tsdb_atomic_metrics_unit_tests  tsdb_atomic_metrics_unit_tests[1]_include.cmake  tsdb_cache_hierarchy_unit_tests  (+52 more)
tools/: CMakeLists.txt  arrow_benchmark.cpp  benchmark_tool.cpp  grafana_read_benchmark.sh  k8s_combined_benchmark.cpp  k8s_data_generator.cpp  k8s_grpc_benchmark.cpp  metrics_dump.cpp  run_benchmark_suite.sh
(+6237 files in other folders)
